main - f3357c1 fix(multiple): resolve sass if function deprecation warnings (#32674)

--- a/a11y/_index.scss
+++ b/a11y/_index.scss
@@ -54,7 +54,13 @@
            'Allowed values are "active" and "none"';
   }
 
-  @media (forced-colors: #{if($target == none, none, active)}) {
+  $query-value: active;
+
+  @if ($target == none) {
+    $query-value: none;
+  }
+
+  @media (forced-colors: #{$query-value}) {
     @content;
   }
 }
